<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SportsManager</string>
    <string name="AddToCustomers">Add to Customers</string>
    <string name="AddToRules">Add to Rules</string>
    <string name="AddToDisciplines">Add to Disciplines</string>
    <string name="AddToEvents">Add to Events</string>
    <string name="NewCustomer">New Customer</string>
    <string name="EditCustomer">Edit Customer</string>
    <string name="NewRule">New Rule</string>
    <string name="EditRule">Edit Rule</string>
    <string name="NewDiscipline">New Discipline</string>
    <string name="EditDiscipline">Edit Discipline</string>
    <string name="SelectDisciplines">Select Disciplines</string>
    <string name="SelectCustomers">Select Customer</string>
    <string name="NewEvent">New Event</string>
    <string name="EditEvent">Edit Event</string>
    <string name="Customer">Customer</string>
    <string name="Event">Event</string>
    <string name="Discipline">Discipline</string>
    <string name="Rule">Rule</string>
    <string name="Customers">Customers</string>
    <string name="Events">Events</string>
    <string name="Disciplines">Disciplines</string>
    <string name="Rules">Rules</string>
    <string name="title_home">Database</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="EMail">E-Mail</string>
    <string name="Telephone">Telephone</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_costumers">CostumersActivity</string>
    <string name="title_activity_disciplines">DisciplinesActivity</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_customer_detail1">CustomerDetail1</string>
    <string name="CustomerDetail">Customer Detail</string>
    <string name="AddNewCustomer">Add New Customer</string>
    <string name="title_activity_rule_detail">RuleDetail </string>
    <string name="BestTime">Best Time</string>
    <string name="WorstTime">Worst Time</string>
    <string name="Points">Points</string>
    <string name="EnterScore">Enter Score</string>
    <string name="WorstTimePoints">Worst-Time-Points</string>
    <string name="BestTimePoints">Best-Time-Points</string>
    <string name="Attempts">Attempts</string>
    <string name="title_activity_discipline_detail">DisciplineDetail</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Select">SELECT</string>
    <string name="OK">OK</string>
    <string name="Back">Back</string>
    <string name="ADD">ADD</string>
    <string name="title_activity_event_start">EventStart</string>
    <string name="SAVE">SAVE</string>
    <string name="StartEvent">START EVENT</string>
    <string name="DisciplinesColon">Disciplines:</string>
    <string name="CustomersColon">Customers:</string>
    <string name="selectAll">Select All</string>
    <string name="chronometer_start">Start</string>
    <string name="chronometer_stop">Stop</string>
    <string name="chronometer_reset">Reset</string>
    <string name="Timer">Timer</string>
    <string name="AddPenalty">AddPenalty</string>
    <string name="Reset">Reset</string>
    <string name="AttemptColon">Attempt: %d</string>
    <string name="AttemptColonBlank">Attempt: </string>
    <string name="ScoreColon">Score: %d</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="text3">text3</string>
    <string name="show_leader_board">Show Leader Board</string>
    <string name="delete">Delete</string>
    <string name="title_activity_leader_board">LeaderBoard</string>
    <string name="title_activity_main">Database</string>
    <string name="database_import">Import</string>
    <string name="database_export" >Export</string>
</resources>
