<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="com.comp.ninti.sportsmanager.MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/rules"
            android:layout_width="130dp"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="onClick"
            android:text="@string/Rules" />

        <Button
            android:id="@+id/disciplines"
            android:layout_width="130dp"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClick"
            android:text="@string/Disciplines" />

        <Button
            android:id="@+id/events"
            android:layout_width="130dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="onClick"
            android:text="@string/Events" />

        <Button
            android:id="@+id/customers"
            android:layout_width="130dp"
            android:layout_height="200dp"
            android:layout_alignLeft="@+id/events"
            android:layout_alignStart="@+id/events"
            android:layout_alignTop="@+id/disciplines"
            android:layout_marginTop="0dp"
            android:onClick="onClick"
            android:text="@string/Customers" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
