<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.comp.ninti.sportsmanager.Timer"
    tools:showIn="@layout/activity_timer"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <RelativeLayout
        android:id="@+id/relativeLayy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_centerVertical="true"
            android:textSize="@android:dimen/notification_large_icon_height" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="false">

            <Button
                android:id="@+id/stop"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bottom_button_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:onClick="onClick"
                android:text="@string/chronometer_stop"></Button>

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bottom_button_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:onClick="onClick"
                android:text="@string/chronometer_reset"></Button>

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bottom_button_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:onClick="onClick"
                android:text="@string/chronometer_start">

                <requestFocus />
            </Button>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="@dimen/fab_width_height"
            android:layout_height="@dimen/fab_width_height"
            android:layout_below="@+id/chronometer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/AddPenalty"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_penalty_time" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
