<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.comp.ninti.sportsmanager.DisciplineDetail"
    tools:showIn="@layout/activity_discipline_detail">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">


            <TextView
                android:id="@+id/discipline_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="51dp"
                android:text="@string/Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/disciplineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/discipline_Name"
                android:layout_alignBottom="@+id/discipline_Name"
                android:layout_alignStart="@+id/discipline_Name"
                android:layout_marginStart="100dp"
                android:layout_toEndOf="@+id/discipline_Name"
                android:hint="@string/Name"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/ruleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignStart="@+id/discipline_Name"
                android:layout_below="@+id/discipline_Name"
                android:layout_marginTop="34dp"
                android:layout_toEndOf="@+id/discipline_Name"
                android:text="@string/Rule"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/disciplineRuleSp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/disciplineName"
                android:layout_alignTop="@+id/ruleText"
                android:layout_below="@+id/disciplineName" />

            <Spinner
                android:id="@+id/disciplineAttemptsSp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/disciplineName"
                android:layout_alignTop="@+id/attemptsText"
                android:layout_below="@+id/disciplineRuleSp" />

            <TextView
                android:id="@+id/attemptsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ruleText"
                android:layout_alignParentBottom="false"
                android:layout_alignStart="@+id/ruleText"
                android:layout_below="@+id/ruleText"
                android:layout_marginTop="34dp"
                android:text="@string/Attempts"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/addDiscipline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_button_height"
                android:text="@string/AddToDisciplines" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
